[gd_scene load_steps=36 format=3 uid="uid://x2so2ayusjw6"]

[ext_resource type="Texture2D" uid="uid://ddxvlbug8olys" path="res://Assets/Sprites/enemies/Slime.png" id="1_8u0pu"]
[ext_resource type="Script" path="res://Scripts/enemy/slime.gd" id="1_fr1f0"]
[ext_resource type="PackedScene" uid="uid://q3bng0o4u44l" path="res://Scenes/enemies/damage_player.tscn" id="3_qnhkn"]
[ext_resource type="AudioStream" uid="uid://bqma45apdavsj" path="res://Assets/Audio/slime/slimejump-6913.mp3" id="4_pp4k2"]
[ext_resource type="AudioStream" uid="uid://dee6s38lta1dl" path="res://Assets/Audio/slime/slime_spawn.mp3" id="5_ehjyy"]
[ext_resource type="AudioStream" uid="uid://dxicxpm4iw2d2" path="res://Assets/Audio/slime/slime_death.mp3" id="5_urxjt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mj62a"]
radius = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_35hfj"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_j5yqv"]
atlas = ExtResource("1_8u0pu")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_htybx"]
atlas = ExtResource("1_8u0pu")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x57c"]
atlas = ExtResource("1_8u0pu")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqq6j"]
atlas = ExtResource("1_8u0pu")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yepe"]
atlas = ExtResource("1_8u0pu")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nea3p"]
atlas = ExtResource("1_8u0pu")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cda8u"]
atlas = ExtResource("1_8u0pu")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpnv0"]
atlas = ExtResource("1_8u0pu")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_khmdy"]
atlas = ExtResource("1_8u0pu")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5msd"]
atlas = ExtResource("1_8u0pu")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_40r0f"]
atlas = ExtResource("1_8u0pu")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j3tg"]
atlas = ExtResource("1_8u0pu")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oui1"]
atlas = ExtResource("1_8u0pu")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnv1j"]
atlas = ExtResource("1_8u0pu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dugr8"]
atlas = ExtResource("1_8u0pu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1c76"]
atlas = ExtResource("1_8u0pu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_krn8b"]
atlas = ExtResource("1_8u0pu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o2qx"]
atlas = ExtResource("1_8u0pu")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghlr2"]
atlas = ExtResource("1_8u0pu")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujghb"]
atlas = ExtResource("1_8u0pu")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sss5j"]
atlas = ExtResource("1_8u0pu")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iscg3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5yqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htybx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x57c")
}],
"loop": false,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqq6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yepe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nea3p")
}],
"loop": false,
"name": &"hit_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cda8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpnv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khmdy")
}],
"loop": false,
"name": &"hit_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5msd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40r0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j3tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oui1")
}],
"loop": true,
"name": &"look_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnv1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dugr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1c76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krn8b")
}],
"loop": true,
"name": &"look_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o2qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghlr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sss5j")
}],
"loop": false,
"name": &"spawning",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_loy1p"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nb7t"]
radius = 2.0
height = 10.0

[sub_resource type="Animation" id="Animation_ly7xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5mjcq"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hf0x"]
_data = {
"RESET": SubResource("Animation_ly7xv"),
"hit_flash": SubResource("Animation_5mjcq")
}

[node name="slime" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 9
script = ExtResource("1_fr1f0")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_mj62a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_35hfj")
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_iscg3")
animation = &"dying"

[node name="DamagePlayer" parent="." instance=ExtResource("3_qnhkn")]
position = Vector2(0, 3)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_loy1p")

[node name="Spawn_timer" type="Timer" parent="."]

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="collision_with_player" type="CharacterBody2D" parent="."]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_with_player"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7nb7t")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -3)
stream = ExtResource("4_pp4k2")
bus = &"Sound Effect"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -3)
stream = ExtResource("5_urxjt")
bus = &"Sound Effect"

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -3)
stream = ExtResource("5_ehjyy")
bus = &"Sound Effect"

[node name="Hit_Flash_animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hf0x")
}

[node name="hit_flash_animation_timer" type="Timer" parent="Hit_Flash_animation_player"]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Hit_Flash_animation_player/hit_flash_animation_timer" to="." method="_on_hit_flash_animation_timer_timeout"]
